--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,39 @@
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+
+@font-face{
+	font-family: 'Segoe ui historic', sans-serif;
+	src: url(/font/Segoe-ui-historic.ttf);
+}
+
+@font-face{
+	font-family: 'proximaNova', sans-serif;
+	src: url(/font/ProximaNova-Regular.otf);
+}
+
+
 
 * {
 	box-sizing: border-box;
 }
-
 body {
+
 	margin: 0;
-	font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
+	/* font-family: "proximaNova", sans-serif; */
 	padding-left: 240px;
-	padding-top:10vh;
   }
+  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, p, a, span{
+    margin-bottom: .5rem;
+    /* font-family: "proximaNova", sans-serif ; */
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+}
 .sticky-top {
     position: fixed;
     top: 0;
     z-index: 1020;
-    width: 100%;
+	width: 100%;
 	left: 0;
 	height: 10vh;
 	border-bottom: 1px solid #ccc;
@@ -37,11 +55,24 @@ h2 {
 }
 
 p {
-	font-size: 14px;
+	font-size: 12px;
+    line-height: 16px;
 	font-weight: 100;
-	line-height: 20px;
 	letter-spacing: 0.5px;
 	margin: 20px 0 30px;
+}
+.bootstrap-select.show-tick .dropdown-menu li a span.text {
+    margin-right: 34px;
+    color: #000;
+    font-size: 13px;
+    text-transform: capitalize;
+}
+
+tbody tr{
+	text-transform: capitalize;
+	font-size: 12px;
+	line-height: 16px;
+	text-align: center;
 }
 
 img{
@@ -66,18 +97,19 @@ a :hover{
 }
 
 .button, .btn {
-	border: 1px solid #55B4B0;
-	background-color: #5B5EA6;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
+    border: 1px solid #007bff;
+    background-color: transparent;
+    color: #007bff;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 8px 30px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    border-radius: 0;
 }
 .btn:hover {
-	background-color: #55B4B0;
+	background-color: #007bff;
 	border: 1px solid #5B5EA6;
 }
 
@@ -138,9 +170,18 @@ input {
 }
 .form_outer{
 }
-.form-control{
+
+
+div.form-control{
 	margin-bottom: 15px;
+	box-shadow: 0px 0px 10px rgb(0,0,0,.1);
 }
+
+input.form-control{
+	margin-bottom: 15px;
+	
+}
+
 /*--------TASK FORM-----*/
 #task_box .task_outer{
 	margin-top: 10%;
@@ -188,13 +229,17 @@ footer a {
   main {
 	position: relative;
   }
-  main .helper {
-    position: relative;
-    border-radius: 20px;
-}
+	main .helper {
+		margin: 0;
+		position: relative;
+		top: 10vh;
+		background-color: #f0f2f5;
+		min-height: 90vh;
+	}
+
   main .helper span {
 	color: rgba(0, 0, 0, 0.2);
-	font-size: 0.4em;
+	font-size: inherit;
 	display: block;
   }
   .menu {
@@ -202,6 +247,7 @@ footer a {
 	height: 90vh;
 	width: 240px;
 	position: fixed;
+	top: 10vh;
 	left: 0;
 	z-index: 5;
 	outline: none;
@@ -422,13 +468,17 @@ ul a li span{
 	}
   }
 
-    /*----------------table style-----------------*/
+	/*----------------table style-----------------*/
+	tbody{
+		background-color: #fff;
+		box-shadow: 0px 0px 10px rgb(0,0,0,.1), inset 5px -4px 10px rgb(0,0,0,.1), inset -5px 0px 10px rgb(0,0,0,.1);
+	}
 	tbody tr:first-child {
-		background: #55B4B0;
+		background: #1877F2;
 		color: #fff!important;
 	}
 	tbody tr:first-child:hover{
-		background: #5bc995;
+		background: #1877F2;
 	}
    .bootstrap-select{
 	width: inherit !important;
@@ -459,7 +509,7 @@ ul a li span{
   }
 
   .top_container{
-	  margin-top: 30px;
+	  padding-top: 30px;
   }
 
   .dboard_card{
@@ -516,7 +566,7 @@ border-left: 1px solid #e4e4e4;
 }
 /*-------task pages------*/
 .card-header{
-	background-color: #55B4B0;
+	background-color: #007bff;
 }
 /*-----------profile page------------*/
 
