--- a/db backup/style.css
+++ b/db backup/style.css
@@ -1,15 +1,26 @@
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 * {
 	box-sizing: border-box;
 }
+@font-face{
+	font-family: "Segoe ui historic", sans-serif;
+	src: url(/font/Segoe-ui-historic.ttf);
+}
 
 body {
+
 	margin: 0;
-	font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-family: "Segoe ui historic", sans-serif !important;
 	padding-left: 240px;
   }
+  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, p, a, span{
+    margin-bottom: .5rem;
+    font-family: "Segoe ui historic", sans-serif !important;
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+}
 
 h1 {
 	font-weight: bold;
@@ -43,6 +54,7 @@ a :hover{
 }
 
 .button, .btn {
+	font-family: "Segoe ui historic", sans-serif;
 	border: 1px solid #FF4B2B;
 	background-color: #FF4B2B;
 	color: #FFFFFF;
