--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@ body {
 	margin: 0;
 	/* font-family: "proximaNova", sans-serif; */
 	padding-left: 240px;
+	color: rgba(255, 255, 255, 0.705);
+	font-weight: 300;
   }
   .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, p, a, span{
     margin-bottom: .5rem;
@@ -29,16 +31,31 @@ body {
     line-height: 1.2;
     color: inherit;
 }
+
+
+h3{
+	font-size: 24px;
+	
+}
+h5{
+	font-size: 15px;
+	font-weight: 700;
+}
+p{
+	font-weight: 300;
+}
+
+
 .sticky-top {
     position: fixed;
     top: 0;
     z-index: 1020;
-	width: 100%;
-	left: 0;
-	height: 10vh;
-	border-bottom: 1px solid #ccc;
-	box-shadow: 0 0 7px #ccc;
-	background-color: #222;
+    width: 100%;
+    left: 0;
+    height: 10vh;
+    /* border-bottom: 1px solid #ccc; */
+    /* box-shadow: 0 0 7px #ccc; */
+    background-color: #000!important;
 }
 .navbar-nav {
     right: 30px;
@@ -177,8 +194,10 @@ div.form-control{
 	box-shadow: 0px 0px 10px rgb(0,0,0,.1);
 }
 
-input.form-control{
+input.form-control,textarea.form-control{
 	margin-bottom: 15px;
+	border-color: #282828;
+	border: 1px solid;
 	
 }
 
@@ -186,6 +205,20 @@ input.form-control{
 #task_box .task_outer{
 	margin-top: 10%;
 
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, 0.25);
+    background-color: #181818;
+    background-clip: padding-box;
+    border: 1px solid #181818;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 
@@ -233,7 +266,7 @@ footer a {
 		margin: 0;
 		position: relative;
 		top: 10vh;
-		background-color: #f0f2f5;
+		background-color: #121212;
 		min-height: 90vh;
 	}
 
@@ -243,7 +276,7 @@ footer a {
 	display: block;
   }
   .menu {
-	background: #55B4B0;
+	background: #000000;
 	height: 90vh;
 	width: 240px;
 	position: fixed;
@@ -269,7 +302,7 @@ footer a {
 	width: 100%;
     overflow: hidden;
     /* border: 1px solid #e7e7e7; */
-    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.2);
+    /* box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.2); */
     height: 100%;
     opacity: 1;
 }
@@ -277,7 +310,7 @@ footer a {
 .user_name_head{
     color: #fff;
     padding: 5px;
-    background: #5B5EA6;
+    background: #292929;
     padding-left: 1.2em;
     margin-top: -30px;
     z-index: 100;
@@ -336,7 +369,7 @@ footer a {
 }
   .menu ul li.icon-logout {
     color: white !important;
-    background-color: #5B5EA6;
+    background-color: #3a3a3a;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -351,7 +384,7 @@ ul a li span{
 	padding-left: 3px;
 }
   .menu ul li:hover {
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color:#282828
   }
   .menu ul li:focus {
 	outline: none;
@@ -469,16 +502,28 @@ ul a li span{
   }
 
 	/*----------------table style-----------------*/
-	tbody{
-		background-color: #fff;
-		box-shadow: 0px 0px 10px rgb(0,0,0,.1), inset 5px -4px 10px rgb(0,0,0,.1), inset -5px 0px 10px rgb(0,0,0,.1);
+	.table-title-holder{
+		padding: 7px 30px 7px 15px;
+		background: #181818;
+		border-bottom: 1px solid #007bff;
+		margin-bottom: 1px;
+		width: fit-content;
+		border-radius: 5px 20px 0px 0px;
+	}
+	
+	.table-bordered {
+		border: none;
+	}
+	tbody {
+		background-color: #282828;
+		/* box-shadow: 0px 0px 10px rgb(0,0,0,.1), inset 5px -4px 10px rgb(0,0,0,.1), inset -5px 0px 10px rgb(0,0,0,.1); */
 	}
 	tbody tr:first-child {
-		background: #1877F2;
+		background: #181818;
 		color: #fff!important;
 	}
 	tbody tr:first-child:hover{
-		background: #1877F2;
+		background: #181818;
 	}
    .bootstrap-select{
 	width: inherit !important;
@@ -486,6 +531,14 @@ ul a li span{
    .dropdown-toggle.bs-placeholder{
 	   background-color: transparent;
    }
+   .table-bordered td, .table-bordered th {
+	border-color: #181818;}
+	
+.table td, .table th {
+    padding: .75rem;
+    vertical-align: top;
+    border-color: #181818;
+}
   /*-----------------main content-------------*/
   .index-content-wrapper{
 	  max-width:1440px;
@@ -518,8 +571,8 @@ ul a li span{
   }
   .dboard_outer {
     padding: 7px;
-    border: 1px solid #ccc;
-    background-color: #e8e8e8;
+    border: 1px solid #181818;
+    background-color: #181818;
     width: 100%;
     height: 200px;
     margin-left: 15px;
